2009-05-14  svu

	* autogen.sh, Makefile.am: fixing the build process (thanks to
	Marc-André Lureau)

2009-04-23  Federico Mena Quintero  <federico@novell.com>

	https://bugs.freedesktop.org/show_bug.cgi?id=21365 - Make sure
	libxklavier's X error handler still runs, even if the XKB
	extension is not present.
	* libxklavier/xklavier_evt.c (xkl_process_error): Fix the
	prototype to match XErrorHandler, so that we don't have to use
	casts when using XSetErrorHandler().
	* libxklavier/xklavier_xkb.c (xkl_xkb_init): In case XKB is not
	present, do not reset the X error handler here...
	* libxklavier/xklavier.c (xkl_engine_constructor): ... but do it
	here instead in case neither the XKB nor xmodmap modules can be
	initialized.  This way if either succeeds, libxklavier will have
	its own X error handler present, which is needed to filter out
	"harmless" errors like BadWindow for disappearing windows.

2009-04-06 svu

	* libxklavier/Makefile.am, tests/Makefile.am: adding -lX11 to .la
	file, http://bugs.freedesktop.org/show_bug.cgi?id=20243

2009-03-18 svu

	* Makefile.am, gtk-doc.make: unneeded external file should not be in dist/CVS
	* configure.in, NEWS: preparing 3.9

2009-03-10 svu

	* libxklavier/xklavier_evt.c: The X11 error processing is more 
	robust in relation to the missing engine (during the 
	initialization)

2009-03-09  svu

	* libxklavier/xklavier_config_xkb.c: no need to display loads of 
	warnings from xkbcomp,
	http://bugs.freedesktop.org/show_bug.cgi?id=20526

2009-02-21  svu

	* libxklavier/Makefile.am, tests/Makefile.am: reordering CFLAGS,
	http://bugs.freedesktop.org/show_bug.cgi?id=20244

2009-01-21  svu

	* configure.in: eliminate bashisms,
	http://bugs.freedesktop.org/show_bug.cgi?id=19645

2008-12-14  svu

	* libxklavier/Makefile.am, tests/Makefile.am: small cygwin fixes,
	http://bugs.freedesktop.org/show_bug.cgi?id=19030

2008-11-26  Rob Bradford  <rob@linux.intel.com>

	* libxklavier/Makefile.am: