@@ -1,3 +1,9 @@
+2009-05-28  svu
+
+	* libxklavier/xklavier_config.c: fixed handling of translated XML
+	entities &lt; / &gt / &amp;.
+	http://bugs.freedesktop.org/show_bug.cgi?id=21924
+
 2009-05-14  svu
 
 	* autogen.sh, Makefile.am: fixing the build process (thanks to
